# CuikSuite

./: CMakeLists.txt  ReadMe.txt
bash/: Welding0D.bash  Welding1D.bash  Welding1D_manifold.bash  Welding2D_collision_manifold.bash  Welding2D_path_planning.bash
doc/: CuikSuiteDoxygenLayout.xml  FAQ.doxygen  doxygen.conf  main.doxygen  robots.txt
doc/images/: cuik.fig  world.fig
doc/java/: mingled.m  separated.m
doc/js/: accordion.js  ajax.js  descriptionNote.js  slider.js  subline.js  tab.js  tab3.js  tree2.js
doc/parameters/: DoubleButterfly_kin.param
doc/plots3d/: DoubleButterfly_final.gcl  DoubleButterfly_kin.gcl  DoubleButterfly_kin_1.gcl  DoubleButterfly_kin_2.gcl  DoubleButterfly_kin_3.gcl  DoubleButterfly_kin_4.gcl  DoubleButterfly_kin_color.gcl
doc/solutions/: DoubleButterfly.links  DoubleButterfly_kin.sol  DoubleButterfly_kin_1.sol  DoubleButterfly_kin_2.sol  DoubleButterfly_kin_3.sol  DoubleButterfly_kin_4.sol  DoubleButterfly_sample_1_sample_0.sol  DoubleButterfly_samples.sol
doc/style/: doxiri.css  iri_doc_footer.html  iri_doc_header.html  iri_doxygen_style.css  iri_page_style.css  menu.js  my_footer.html  my_header.html  my_tabs.css  web.css
doc/videos/: pr2_fridge.mov  trisector.mov
examples/: examples.txt
examples/Barret/: Barret.txt  BarretArm-Maze-FixRot.joints  (+21 more)
scripts/: RSSChain  RSSChain_can  RSSChain_can2  RSSChain_setrill  RSSChain_setrill2  RSSChain_tornavis  RSSChain_tornavis2  cuikcompile  cuikexplore  cuiklog  cuikmove  cuikmpi  cuikplayer  rkillcuik  rmpicuik  scripts.txt  testgrid
share/: FindGTK2.cmake  FindPackageHandleStandardArgs.cmake  axes2.list  machines.LINUX
src/: CMakeLists.txt
src/Cuik/: CMakeLists.txt  cuik.c  cuikmpi
src/CuikAnimate/: CMakeLists.txt  cuikanimate.c  cuikexplore  cuikexplore.c  cuikexplore_callbacks.c  cuikexplore_interface.c  cuikmove  cuikmove.c  cuikmove_callbacks.c  cuikmove_interface.c  cuikplay.c  cuikplay_callbacks.c  cuikplay_interface.c  cuikplay_support.c  cuikplayer  cuiktransform.c
src/CuikAnimate/include/: cuikexplore.h  cuikexplore_callbacks.h  cuikexplore_interface.h  cuikmove.h  cuikmove_callbacks.h  cuikmove_interface.h  cuikplay.h  cuikplay_callbacks.h  cuikplay_interface.h  cuikplay_support.h
src/CuikAtlas/: CMakeLists.txt  atlas.c  atlasrrt.c  averages.c  btree.c  chart.c  cpolytope.c  cuikME.c  cuikatlas.c  cuikatlas2graph.c  cuikatlasAstar.c  cuikatlasGBF.c  cuikatlascenters.c  cuikatlasrrt.c  cuikatlasrrtstar.c  cuikatlastrrt.c  cuikatlasvolume.c  cuikcbirrt.c  cuikccrrt.c  cuikcctrrt.c  cuikcost.c  cuikdim.c  cuikkinoest.c  cuikkinorrt.c  cuikminimize.c  cuikpatheffort.c  cuikpathlength.c  cuikplotatlas.c  cuikplotatlasrrt.c  cuikplotforcefield.c  cuikplotpath.c  cuikplotrrt.c  cuikrefinetrajectory.c  cuikrrtcosts.c  cuikrrterror.c  cuikrrtnodes.c  cuikrrtpath.c  cuikrrtstar.c  cuiksimulate.c  cuiksimulateEuler.c  (+10 more)
src/CuikAtlas/include/: atlas.h  atlasrrt.h  averages.h  btree.h  chart.h  cpolytope.h  dynamics.h  rrt.h  sa.h  samples.h  scpolytope.h  wcs.h
src/CuikBabel/: CMakeLists.txt  babel.cpp  energy.cpp
src/CuikBabel/include/: babel.h
src/CuikBase/: CMakeLists.txt  algebra.c  basic_algebra.c  box.c  box_heap.c  box_list.c  constants.c  csmapping.c  cuiksystem.c  equation.c  equations.c  eqvector.c  error.c  filename.c  geom.c  heap.c  hessian.c  htransform.c  interval.c  interval_vector.c  jacobian.c  kequation.c  linear_constraint.c  list.c  mequation.c  monomial.c  nhessian.c  njacobian.c  parameters.c  random.c  readcuiksystem.l  readcuiksystem.y  readparameters.l  readparameters.y  shtransform.c  simplex.c  simplex_clp.c  simplex_glpk.c  simplex_gurobi.c  simplex_lpsolve.c  (+6 more)
src/CuikBase/include/: algebra.h  basic_algebra.h  boolean.h  box.h  box_heap.h  box_list.h  constants.h  csmapping.h  cuiksystem.h  defines.h  equation.h  equations.h  eqvector.h  error.h  filename.h  geom.h  heap.h  hessian.h  htransform.h  interval.h  interval_vector.h  jacobian.h  kequation.h  linear_constraint.h  list.h  mequation.h  monomial.h  nhessian.h  njacobian.h  parameters.h  random.h  readcuiksystemtypes.h  shtransform.h  simplex.h  statistics.h  trans_seq.h  variable.h  variable_set.h  variables.h  vector.h
src/CuikBio/: CMakeLists.txt  bioworld.c  cuikatoms2samples.c  cuikbioatlastrrt.c  cuikbiominimize.c  cuikenergy.c  cuikpdb2sample.c  cuikpdb2world.c  cuikrmse.c  cuiksample2pdb.c  cuiksamples2atoms.c  cuiksamples2rgroups.c
src/CuikBio/include/: bioworld.h
src/CuikCad/: CMakeLists.txt  cuikcad.c
src/CuikEquations/: CMakeLists.txt  cuikequations.c
src/CuikGazebo/: CMakeLists.txt  cuikworld2sdf.cpp
src/CuikNewton/: CMakeLists.txt  cuikgradient.c  cuiknewton.c
src/CuikPlot/: CMakeLists.txt  cuikplot.c  plot2D.c
src/CuikPlot/include/: plot2D.h
src/CuikPlot3d/: CMakeLists.txt  color.c  cuikplot3d.c  plot3d.c
src/CuikPlot3d/include/: color.h  plot3d.h
src/CuikROS/: CMakeLists.txt  cuikurdf2world.cpp
src/CuikSample/: CMakeLists.txt  cuikerror.c  cuikjoints2links.c  cuiklinks2joints.c  cuiksample.c  cuiksamples2sols.c  cuiksols2samples.c
src/CuikSilhouette/: CMakeLists.txt  cp.c  cuiksilhouette.c
src/CuikSilhouette/include/: cp.h
src/CuikSimplify/: CMakeLists.txt  cuikatan2.c  cuikmerge.c  cuikmergeboxes.c  cuiksimplify.c  cuikunsimplify.c
src/CuikSingular/: CMakeLists.txt  cuikTWS.c  cuikaddjacobian.c  cuiksingequations.c
src/CuikSlam/: CMakeLists.txt  cuikslam.c
src/CuikSort/: CMakeLists.txt  cuiksort.c  glr.c  llr.c
src/CuikSort/include/: general.h  glr.h  llr.h
src/CuikWorld/: CMakeLists.txt  cd.c  cd_bullet.cpp  cd_fcl.cpp  cd_pqp.cpp  cd_rigidCLL.cpp  cd_vcollide.cpp  cuikcollisions.c  cuikworld2world.c  cuikworldaxes.c  cuikworldforces.c  environment.c  error_tensegrity.c  error_world.c  joint.c  link.c  mechanism.c  polyhedron.c  readtensegrity.l  readtensegrity.y  readworld.l  readworld.y  sample.c  world.c
src/CuikWorld/include/: cd.h  cd_bullet.h  cd_fcl.h  cd_pqp.h  cd_rigidCLL.h  cd_vcollide.h  environment.h  error_tensegrity.h  error_world.h  joint.h  link.h  mechanism.h  polyhedron.h  sample.h  varnames.h  world.h
(+1144 files in other folders)
