# Just process the sub directories

add_subdirectory(CuikBase)
add_subdirectory(Cuik)

IF (NOT CuikSuite_on_grid)
  add_subdirectory(CuikPlot)
  add_subdirectory(CuikPlot3d)
  add_subdirectory(CuikSort)
  add_subdirectory(CuikSimplify)
  add_subdirectory(CuikSample)
  add_subdirectory(CuikNewton)
  add_subdirectory(CuikSilhouette)
  add_subdirectory(CuikWorld)
  add_subdirectory(CuikAtlas) 
  add_subdirectory(CuikEquations)
  add_subdirectory(CuikSingular)
  add_subdirectory(CuikAnimate)
  add_subdirectory(CuikSlam)
  add_subdirectory(CuikBio)
  add_subdirectory(CuikBabel) 
  add_subdirectory(CuikROS)
  add_subdirectory(CuikGazebo)
ENDIF(NOT CuikSuite_on_grid)
