INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/CuikBase/include)

ADD_EXECUTABLE(cuik cuik.c)

TARGET_LINK_LIBRARIES(cuik cuik-common)

SET(PROGRAMS ${PROGRAMS} cuik)

INSTALL(PROGRAMS cuikmpi DESTINATION bin)

INSTALL(TARGETS cuik
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)

